--- a/index.html
+++ b/index.html
@@ -8,29 +8,32 @@
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="src/img/logo.png" type="image/x-icon" />
 
-    <link rel="stylesheet" href="src/sass/main.scss" />
+    <link rel="stylesheet" href="src/css/style.css" />
     <script defer src="src/js/controller.js"></script>
 
-    <title>forkify // Search over 1,000,000 recipes</title>
+    <title>Gamify | Busca tu videojuego favorito</title>
   </head>
 
   <body>
     <div class="container">
       <header class="header">
-        <img src="src/img/logo.png" alt="Logo" class="header__logo" />
+        <a href="/">
+          <img src="src/img/logo.png" alt="Logo" class="header__logo" />
+        </a>
+
         <form class="search">
           <input
             type="text"
             class="search__field"
-            placeholder="Search over 1,000,000 recipes..."
+            placeholder="Busca entre 500.000 videojuegos..."
           />
           <button class="btn search__btn">
             <svg class="search__icon">
               <use href="src/img/icons.svg#icon-search"></use>
             </svg>
-            <span>Search</span>
+            <span>Buscar</span>
           </button>
         </form>
 
@@ -41,7 +44,7 @@
                 <svg class="nav__icon">
                   <use href="src/img/icons.svg#icon-edit"></use>
                 </svg>
-                <span>Add recipe</span>
+                <span>Agregar juego</span>
               </button>
             </li>
             <li class="nav__item">
@@ -49,7 +52,7 @@
                 <svg class="nav__icon">
                   <use href="src/img/icons.svg#icon-bookmark"></use>
                 </svg>
-                <span>Bookmarks</span>
+                <span>Favoritos</span>
               </button>
               <div class="bookmarks">
                 <ul class="bookmarks__list">
@@ -122,14 +125,13 @@
         </div>
 
         <p class="copyright">
-          &copy; Copyright by
+          &copy; Copyright por
           <a
             class="twitter-link"
             target="_blank"
-            href="https://twitter.com/jonasschmedtman"
-            >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't use to teach. Don't claim
-          as your own.
+            href="https://twitter.com/MichelGimenez7"
+            >Michel gimenez</a
+          >.
         </p>
       </div>
 
@@ -140,7 +142,10 @@
               <use href="src/img/icons.svg#icon-smile"></use>
             </svg>
           </div>
-          <p>Start by searching for a recipe or an ingredient. Have fun!</p>
+          <p>
+            Comenza buscando un videojuego y agrega a favoritos los que mas te
+            gusten!
+          </p>
         </div>
 
         <!-- <div class="spinner">
@@ -252,72 +257,60 @@
       <button class="btn--close-modal">&times;</button>
       <form class="upload">
         <div class="upload__column">
-          <h3 class="upload__heading">Recipe data</h3>
-          <label>Title</label>
-          <input value="TEST23" required name="title" type="text" />
-          <label>URL</label>
-          <input value="TEST23" required name="sourceUrl" type="text" />
-          <label>Image URL</label>
-          <input value="TEST23" required name="image" type="text" />
-          <label>Publisher</label>
-          <input value="TEST23" required name="publisher" type="text" />
-          <label>Prep time</label>
-          <input value="23" required name="cookingTime" type="number" />
-          <label>Servings</label>
-          <input value="23" required name="servings" type="number" />
+          <h3 class="upload__heading">Detalles del juego</h3>
+          <label>Titulo</label>
+          <input value="" required name="title" type="text" />
+          <label>Lanzamiento</label>
+          <input value="" required name="sourceUrl" type="text" />
+          <label>Descripcion</label>
+          <input value="" required name="image" type="text" />
+          <label>Puntaje</label>
+          <input value="" required name="publisher" type="text" />
+          <label>Desarrolladora</label>
+          <input value="" required name="cookingTime" type="number" />
+          <label>Imagen de portada</label>
+          <input value="" required name="servings" type="number" />
+          <label>Url de video</label>
+          <input value="" required name="servings" type="number" />
         </div>
 
         <div class="upload__column">
-          <h3 class="upload__heading">Ingredients</h3>
-          <label>Ingredient 1</label>
+          <h3 class="upload__heading">Imagenes</h3>
+          <label>Imagen 1</label>
           <input
-            value="0.5,kg,Rice"
+            value=""
             type="text"
             required
             name="ingredient-1"
-            placeholder="Format: 'Quantity,Unit,Description'"
+            placeholder=""
           />
-          <label>Ingredient 2</label>
-          <input
-            value="1,,Avocado"
-            type="text"
-            name="ingredient-2"
-            placeholder="Format: 'Quantity,Unit,Description'"
-          />
-          <label>Ingredient 3</label>
-          <input
-            value=",,salt"
-            type="text"
-            name="ingredient-3"
-            placeholder="Format: 'Quantity,Unit,Description'"
-          />
-          <label>Ingredient 4</label>
-          <input
-            type="text"
-            name="ingredient-4"
-            placeholder="Format: 'Quantity,Unit,Description'"
-          />
-          <label>Ingredient 5</label>
-          <input
-            type="text"
-            name="ingredient-5"
-            placeholder="Format: 'Quantity,Unit,Description'"
-          />
-          <label>Ingredient 6</label>
-          <input
-            type="text"
-            name="ingredient-6"
-            placeholder="Format: 'Quantity,Unit,Description'"
-          />
+          <label>Imagen 2</label>
+          <input value="" type="text" name="ingredient-2" placeholder="" />
+          <label>Imagen 3</label>
+          <input value="" type="text" name="ingredient-3" placeholder="" />
+          <label>Imagen 4</label>
+          <input type="text" name="ingredient-4" placeholder="" />
+          <label>Imagen 5</label>
+          <input type="text" name="ingredient-5" placeholder="" />
+          <label>Imagen 6</label>
+          <input type="text" name="ingredient-6" placeholder="" />
         </div>
 
         <button class="btn upload__btn">
           <svg>
             <use href="src/img/icons.svg#icon-upload-cloud"></use>
           </svg>
-          <span>Upload</span>
+          <span>Crear juego</span>
         </button>
       </form>
     </div>
+
+    <div class="overlay-2 hidden"></div>
+    <div class="add-game-window hidden">
+      <button class="btn--close-img-modal">&times;</button>
+      <img alt="" class="add-game-window-img" />
+    </div>
+
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   </body>
 </html>
